Release history for Module-Metadata

1.000012 - 2013-05-04
  - improved package detection heuristics (thanks, Edward Zborowski!)
  - fix ->contains_pod (RT#84932, Tokuhiro Matsuno)
  - fix detection of pod after __END__ (RT79656, Tokuhiro Matsuno)

1.000011 2012-08-16
  - LEONT++ hasn't found any issues with my changes; mark it done (or at
    least ready for smoking). (APEIRON)

1.000010_003 2012-08-16 01:00:00
  - Remove other spurious message (APEIRON)

1.000010_002 2012-08-15 20:15:00
  - APEIRON is an idiot (APEIRON)

1.000010_001 2012-08-15 20:00:00
  - Dev release to test removing a warning about modules not using the
    'eval $VERSION' syntax which causes lots of spew. (APEIRON)

1.000010 2012-07-29 19:30:00
  - Performance improvement: the creation of a Module::Metadata object
    for a typical module file has been sped up by about 40% (VPIT)
  - Fix t/metadata.t failure under Cygwin (JDHEDDEN)
  - Portability fix-ups for new_from_module() and test failures on VMS (CBERRY)

1.000009 2012-02-08 12:00:00
  - API of 'provides' changed to require a 'version' argument to future
    proof the function against CPAN Meta Spec changes (DAGOLDEN)
  - Fatal errors now use 'croak' instead of 'die'; Carp added as
    prerequisite (DAGOLDEN)

1.000008 2012-02-07 22:30:00
  - Adds 'provides' method to generate a CPAN META provides data structure
    correctly; use of package_versions_from_directory is discouraged (DAGOLDEN)

1.000007 2011-09-07 12:00:00
  - Apply VMS fixes backported from blead (Craig A. Berry)

1.000006 2011-08-29 04:00:00
  - Support PACKAGE BLOCK syntax (VPIT)

1.000005 2011-08-02 09:45:00
  - Localize $package::VERSION during version discovery (MIYAGAWA)
  - Fix references to Module::Build::ModuleInfo [RT #66133] (DAGOLDEN)
  - Added 'new_from_handle()' method [RT #68875] (DAGOLDEN)
  - Improved documentation (SYNOPSIS, broke out class/object method, and
    other minor edits) (DAGOLDEN)

1.000004 2011-02-03 07:55:00