@@ -18,6 +18,10 @@ WriteMakefile(
     'vars'        => 0,
     'version'     => 0.87,
     'warnings'    => 0,
+    $] < 5.008
+      ? ( 'IO::Scalar' => 0 )
+      : ()
+    ,
   },
   META_MERGE => {
     dynamic_config => 0,
