@@ -1,5 +1,8 @@
 Release history for Module-Metadata
 
+  - Fix reliance on recent Test::Builder
+  - Make tests perl 5.6 compatible
+
 1.000012 - 2013-05-04
   - improved package detection heuristics (thanks, Edward Zborowski!)
   - fix ->contains_pod (RT#84932, Tokuhiro Matsuno)
